# conference

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/versions/: 5da4e63b01fd_initial_migration.py  878b9c30c8e6_time_start_end_datetime_type.py  978867cffd94_cascade_delete_added.py
api/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  token.py  utils.py
api/handlers/: login.py  presentations.py  reports.py  rooms.py  schedule.py  users.py
api/routers/: login.py  presentations.py  reports.py  rooms.py  schedule.py  users.py
api/schemas/: presentations.py  reports.py  rooms.py  schedule.py  users.py
api/tests/: conftest.py  test_app.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 878b9c30c8e6_time_start_end_datetime_type.py  978867cffd94_cascade_delete_added.py  f76326d22621_add_demo_data.py
app/api/: config.py  db.py  deps.py  main.py  security.py  utils.py
app/api/handlers/: login.py  presentations.py  reports.py  rooms.py  schedule.py  users.py
app/api/routers/: login.py  presentations.py  reports.py  rooms.py  schedule.py  users.py
app/api/schemas/: presentations.py  schedule.py
app/api/tests/: conftest.py  test_app.py  utils.py
