[project]
name = "wa-conf"
version = "0.1.0"
description = ""
authors = [
    {name = "Jutiale",email = "jutiale@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic (>=1.15.1,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg[binary,pool] (>=3.2.6,<4.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
